add multi tool command , cvss, eternalblue multi nmap parsing, token handling of scopes, autoscan and queues changes
